--- a/style.css
+++ b/style.css
@@ -49,6 +49,10 @@
     border: 1px solid rgba(31, 32, 65, 0.25);
     border-radius: 4px;
     padding-left: 15px;
+    margin-right: 20px;
+    appearance: none;
+    background: url(images/icon-select.png) no-repeat right;
+    background-position-x: 95%;
 }
 
 .input-texts-top {
@@ -159,7 +163,7 @@
 .input-arrow {
     position: absolute;
     top: 12px;
-    right: 10px;
+    right: 20px;
 }
 
 .right {
@@ -237,7 +241,27 @@
     margin-top: 18px;
 }
 
+.name {
+    color: gray;
+}
 
+
+.input-type {
+    color: gray;
+}
+
+
+.checkbox-and-text {
+    margin-top: 10px;
+}
+
+.select {
+    border: aqua;
+}
+
+.bold-black-text select {
+    border: aliceblue;
+}
 
 
 
